# lazyjira

./: CONTRIBUTING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
src/lazyjira/: api.py
src/lazyjira/commands/: move.py
