[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "lazyjira"
version = "0.1.3"
description = "Zero-dependency CLI for Jira Cloud REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Exis Z", email = "gotexis@users.noreply.github.com" },
]
keywords = [
    "jira",
    "cli",
    "devtools",
    "atlassian",
    "issue-tracker",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/gotexis/lazyjira"
Repository = "https://github.com/gotexis/lazyjira"
Issues = "https://github.com/gotexis/lazyjira/issues"
Changelog = "https://github.com/gotexis/lazyjira/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.scripts]
lazyjira = "lazyjira.cli:main"

[tool.hatch.build.targets.wheel]
packages = [
    "src/lazyjira",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
